SERVER-21251 consistently use BSONElement::number() >= 0 to distinguish ascending/descending in key pattern